--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "author": "Judd Misael R. Baguio",
   "license": "ISC",
-  "dependencies": {
-    "universal-cookie": "^4.0.4"
-  },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -25,6 +22,7 @@
     "react-dom": "^17.0.2",
     "rollup": "^2.52.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.30.0"
+    "rollup-plugin-typescript2": "^0.30.0",
+    "universal-cookie": "^4.0.4"
   }
 }
